<resources>
    <!--  SPLASH LOGIN STRINGS  -->
    <string name="app_name">BBQueue</string>
    <string name="loginBtn">LOGIN(store)</string>
    <string name="rgstrBtn">CREATE ACCOUNT</string>
    <string name="lgnToast">LOGGED IN</string>
    <string name="rgstToast">REGISTERED</string>
    <string name="navFrontQueue">FrontOfQueue</string>

    <!--  FRONT OF QUEUE STRINGS  -->
    <string name="FOQ_TitleString">FRONT OF QUEUE</string>
    <string name="FOQ_lateHint">I will be late by:</string>
    <string name="FOQ_lateHintMinutes">minutes</string>
    <string name="REBBQUEUE">Queue Again</string>
    <string name="btnReQueueGPS">Queue based on GPS</string>
    <string name="btnGetDirections">Directions</string>

    <!-- IN QUEUE STRINGS -->
    <string name="InQueueTopMessage">You are in queue at</string>
    <string name="InQueueFrontOfQueue">Front of queue at</string>
    <string name="InQueueDirectionsBtn">Directions</string>
    <string name="InQueueTimeLeftMessage1">Time remaining: </string>
    <string name="InQueueTimeLeftMessage2">until you reach the front of the queue</string>
    <string name="InQueueAvgWait">Average Wait Time: %d mins</string>
    <string name="InQueueDone">Done!</string>
    <string name="InQueueAbandon">Abandon</string>
    <string name="InQueueContact">Contact</string>
    <string name="InQueueBack">Back</string>

    <!-- RESLIST STRINGS -->
    <string name="reslist_restaurant">Restaurant</string>
    <string name="reslist_q">Queue</string>
    <string name="reslist_sort">Sort</string>
    <string name="navResList">Login(Customer)</string>
    <string name="navQueue">QUEUE</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Restaurant name</string>
    <string name="reslist_address">Address</string>
    <string name="reslist_number">Phone No.</string>
    <string name="reslist_directions">Directions</string>
    <string name="reslist_avgWait">WaitTime (avg)</string>
    <string name="restaurants">Restaurants</string>
    <string name="resFrag_partySize">1</string>

    <!--    Store Page      -->
    <string name="storeA_viewQBtn">Add Section</string>
    <string name="storeA_editBtn">Edit Store Details</string>
    <string name="profilepicturedescription">Profile Picture</string>
    <string name="store_name">Store Name</string>
    <string name="store_address">Store Address</string>
    <string name="viewqueuetoast">View your Queue</string>

    <!--    Store Details-->
    <string name="editStoreNameHint">Store Name:</string>
    <string name="edit_store_address_hint">Address</string>
    <string name="store_hours_title">Hours of Operation</string>
    <string name="tableSizeHint">Table Size</string>
    <string name="numHint">Persons</string>
    <string name="tableAmountHint">Amount</string>
    <string name="tableAmountDisplay">Tables</string>
    <string name="tables_title">Table Info</string>
    <string name="btnAddTable">Add Table</string>
    <string name="removeBtn">X</string>
    <string name="queueSwitch">Open</string>
    <string name="queue_status_title">Wait List</string>
    <string name="custNum">7</string>
    <string name="edit_store_wait_hint">Average Customer Time</string>
    <string name="customer_wait">Minutes</string>
    <string name="Monday">Monday</string>
    <string name="time">12:00 PM</string>
    <string name="to">to</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="hoobtn">Hours of Operation</string>
    <string name="action_settings">Settings</string>
    <string name="CustQueuePartySizeSort">Party Size</string>
    <string name="CustQueueETAsort">ETA</string>
    <string name="CustQueueCallCust">Call</string>
    <string name="CustQueueTextCust">Text</string>
    <string name="CustQueueCustPhoneNumber">555-555-5555</string>
    <string name="CustQueueCustPartySize">Party Size: 3</string>
    <string name="CustQueueCustName">John Doe</string>
    <string name="MainLogin">Login</string>
    <string name="WhatTypeAccount">What type of account are you creating?</string>
    <string name="CustomerCreateAccount">Customer</string>
    <string name="ResCreateAccount">Restaurant</string>
    <string name="CustFName">First name</string>
    <string name="CustLName">Last name</string>
    <string name="CustAddress">Home address</string>
    <string name="CustEmail">Email address</string>
    <string name="CustPassword">Password</string>
    <string name="CustPhone">Phone number</string>
    <string name="ResNameCA">Restaurant name</string>
    <string name="ResAddressCA">Restaurant address</string>
    <string name="ResWebsiteCA">Restaurant website URL</string>
    <string name="MainLogin2">Login Store</string>
    <string name="section_name">Section 1</string>
    <string name="tablesAvailable">0/10 Tables\nOpen</string>
    <string name="ResendVeri">Resend Verification</string>
    <string name="VerificationWarn">"Your email is not verified. "</string>
    <string name="sectionTitle">Section</string>
    <string name="table_name">Table Name</string>
    <string name="_2_person">2 Person</string>
    <string name="open">open</string>
    <string name="seatTable">Seat</string>
    <string name="openTable">Occupied</string>
    <string name="tableIdHint">Table ID</string>
    <string name="dummyTID">1 - A</string>
    <string name="tableSeatHint">Seats</string>
    <string name="seat">Seat</string>
    <string name="party_name">Party Name</string>
    <string name="_4">4</string>
    <string name="table_name_hint">Table Name:</string>
    <string name="current_name">current name</string>
    <string name="_4_seats">4 Seats</string>
    <string name="seats">Seats:</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="update">update</string>
    <string name="edit_table">Edit Table</string>
    <string name="btnDelete">Delete</string>
    <string name="btnUpdate">Update</string>
    <string name="setSection">Set section name</string>
    <string name="tables_touch_to_seat_hold_to_edit">Tables, touch to seat, hold to edit.</string>
    <string name="phone_number">Phone number</string>
    <string name="size">Size</string>
    <string name="bigphone">PHONE</string>
    <string name="bigSize">SIZE</string>
    <string name="name">NAME</string>
    <string name="ftpend">Feature Pending</string>
    <string name="type">type</string>
    <string name="verisent">Verification Sent</string>
    <string name="veriNotSent">Verification email not sent</string>
    <string name="auth_succ">Authentication Success.</string>
    <string name="auth_fail">Authentication failed.</string>
    <string name="users">Users</string>
    <string name="resInfo">Res Info</string>
    <string name="updTableTag">UPDATE TABLES</string>
    <string name="index">index</string>
    <string name="r_path">Restaurants</string>
    <string name="s_path">sections/</string>
    <string name="u_path">Users</string>
    <string name="tableAlertHint">Open Table?</string>
    <string name="openTblWarning">Opening this table will remove customer data and make it available to seating.</string>
    <string name="sections">sections</string>
    <string name="data">DATA</string>
    <string name="cant_db">Couldn\'t read from DB</string>
    <string name="update_section">Update Section</string>
    <string name="nm_required">Name is required</string>
    <string name="v_is">\"Value is: \"</string>
    <string name="one_warning">Restaurants must have at least 1 section</string>
</resources>