<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_name_hint"/>

    <EditText
        android:id="@+id/currentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seats"/>

    <EditText
        android:id="@+id/currentSeats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/_4_seats"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/editTblBtnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/themedBtn"
            android:text="@string/delete"
            android:layout_marginHorizontal="5dp"/>

        <Button
            android:id="@+id/editTblBtnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/themedBtn"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:layout_marginHorizontal="5dp"/>

    </LinearLayout>
    <Button
        android:id="@+id/editTblBtnSave"
        android:layout_width="match_parent"
        style="@style/themedBtn"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/update"/>
</LinearLayout>