<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".Store_Activity">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start">

        <ImageView
            android:id="@+id/storeProfileImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="0"
            android:layout_column="0"
            android:background="#6632C3"
            android:contentDescription="@string/profilepicturedescription"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/store_profile"
            tools:srcCompat="@drawable/store_profile" />

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_column="1"
            android:layout_row="0"
            android:orientation="vertical"
            android:layout_width="wrap_content">

            <TextView
                android:id="@+id/storeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/store_name"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/storeAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/store_address" />

        </LinearLayout>

    </GridLayout>

    <Button
        android:id="@+id/editInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="editStoreClick"
        android:text="@string/storeA_editBtn" />

    <Button
        android:id="@+id/viewQueue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="viewQueueClick"
        android:text="@string/storeA_viewQBtn" />

</LinearLayout>