<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextSectionId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:textColorHint="@color/BBQGreyPurple"
        android:hint="@string/setSection"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        style="@style/themedBtn"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btnUpdate" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/themedBtn"
        android:text="@string/btnDelete" />
</LinearLayout>