<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/partyName"
        style="@style/seating_list_item_textView"
        android:layout_weight="1"
        android:text="@string/party_name"/>

    <TextView
        android:id="@+id/partyNumber"
        style="@style/seating_list_item_textView"
        android:layout_weight="1"
        android:text="@string/phone_number"/>
    <TextView
        android:id="@+id/partySize"
        style="@style/seating_list_item_textView"
        android:gravity="center"
        android:layout_weight=".5"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/_4"/>
<!--    <Button-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1"-->
<!--        android:textSize="18sp"-->
<!--        android:text="@string/btnAddTable"/>-->
</LinearLayout>