<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:descendantFocusability="blocksDescendants"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/partyName"
            android:layout_weight="1"
            style="@style/seating_list_layout_textView"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/partyNumber"
            style="@style/seating_list_layout_textView"
            android:layout_weight="1"
            android:text="@string/bigphone"/>
        <TextView
            android:id="@+id/partySize"
            android:layout_weight=".5"
            style="@style/seating_list_layout_textView"
            android:textAlignment="center"
            android:text="@string/bigSize"/>
        <!--    <Button-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_weight="1"-->
        <!--        android:textSize="18sp"-->
        <!--        android:text="@string/btnAddTable"/>-->
    </LinearLayout>
    <ListView
        android:id="@+id/lvSeatingList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>